--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
 
   balancer:
     build: .
-    command: ["lb", "--trace=true"]
+    command: "lb"
     networks:
       - servers
     ports:
@@ -15,6 +15,8 @@ services:
 
   server1:
     build: .
+    depends_on:
+      - "database"
     networks:
       - servers
     ports:
@@ -22,6 +24,8 @@ services:
 
   server2:
     build: .
+    depends_on:
+      - "database"
     networks:
       - servers
     ports:
@@ -29,6 +33,8 @@ services:
 
   server3:
     build: .
+    depends_on:
+      - "database"
     networks:
       - servers
     ports:
