--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -12,6 +12,7 @@ services:
       - server2
       - server3
       - balancer
+      - database
 
   balancer:
     # Для тестів включаємо режим відлагодження, коли балансувальник додає інформацію, кому було відправлено запит.
